--- a/trunk/SourceCode/FixedAsset/PopupPage.Master
+++ b/trunk/SourceCode/FixedAsset/PopupPage.Master
@@ -12,25 +12,18 @@
     <form id="form1" runat="server">
     <div>
         <asp:Literal ID="litStyle" runat="server"></asp:Literal>
-        <asp:ScriptManager ID="ScriptManager1" runat="server" EnableHistory="false" EnableScriptLocalization="true"
-            EnableSecureHistoryState="true" EnableScriptGlobalization="true">
-            <CompositeScript>
-                <Scripts>
-                    <asp:ScriptReference Name="AjaxControlToolkit.Common.Common.js" Assembly="AjaxControlToolkit" />
-                    <asp:ScriptReference Name="AjaxControlToolkit.Compat.Timer.Timer.js" Assembly="AjaxControlToolkit" />
-                    <asp:ScriptReference Name="AjaxControlToolkit.ExtenderBase.BaseScripts.js" Assembly="AjaxControlToolkit" />
-                    <asp:ScriptReference Name="SeallNet.WebControls.Page.js" Assembly="SeallNet.WebControls" />
-                    <asp:ScriptReference Name="SeallNet.WebControls.Common.js" Assembly="SeallNet.WebControls" />
-                    <asp:ScriptReference Path="~/Scripts/IframeAutoFit.js" />
-                    <asp:ScriptReference Path="~/Scripts/Extjs/ext-base.js" />
-                    <asp:ScriptReference Path="~/Scripts/Extjs/ext-all.js" />
-                    <asp:ScriptReference Path="~/Scripts/Dialog.js" />
-                    <asp:ScriptReference Path="~/Scripts/Ajax.js" />
-                    <asp:ScriptReference Path="~/Scripts/Main.js" />
-                    <asp:ScriptReference Path="~/Scripts/jquery-1.4.1.min.js" />
-                </Scripts>
-            </CompositeScript>
-        </asp:ScriptManager>
+        <asp:ScriptManager ID="ScriptManager1" runat="server" EnablePartialRendering="true" AllowCustomErrorsRedirect="true"
+        EnablePageMethods="true">
+        <Scripts>
+            <asp:ScriptReference Path="~/Scripts/IframeAutoFit.js" />
+            <asp:ScriptReference Path="~/Scripts/Extjs/ext-base.js" />
+            <asp:ScriptReference Path="~/Scripts/Extjs/ext-all.js" />
+            <asp:ScriptReference Path="~/Scripts/Dialog.js" />
+            <asp:ScriptReference Path="~/Scripts/Ajax.js" />
+            <asp:ScriptReference Path="~/Scripts/Main.js" />
+            <asp:ScriptReference Path="~/Scripts/jquery-1.4.1.min.js" />
+        </Scripts>
+    </asp:ScriptManager>
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         </asp:ContentPlaceHolder>
     </div>
