--- a/SourceCode/FixedAsset/Admin/MasterPage.master
+++ b/SourceCode/FixedAsset/Admin/MasterPage.master
@@ -1,4 +1,5 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="MasterPage.master.cs" Inherits="FixedAsset.Web.Admin.MasterPage" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="MasterPage.master.cs"
+    Inherits="FixedAsset.Web.Admin.MasterPage" %>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -11,7 +12,7 @@
     <script src="../Scripts/Dialog.js" type="text/javascript"></script>
     <link href="../App_Themes/Control_Theme/Dialog.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="css/default.css" type="text/css" />
-    <link href="css/tag.css" rel="stylesheet" type="text/css" />
+    <link href="css/tag.css" rel="stylesheet" type="text/css" />    
     <title>固定资产管理系统</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
         <script type="text/javascript">
@@ -23,6 +24,7 @@
 </head>
 <body>
     <form id="form1" runat="server">
+    <asp:Literal ID="litStyle" runat="server" />
     <asp:ScriptManager ID="ScriptManager1" runat="server" EnablePartialRendering="true"
         AllowCustomErrorsRedirect="true" EnablePageMethods="true">
         <Scripts>
