--- a/SourceCode/FixedAsset/Admin/MasterPage.master
+++ b/SourceCode/FixedAsset/Admin/MasterPage.master
@@ -11,8 +11,9 @@
     <script src="js/moo.fx.pack.js" type="text/javascript"></script>
     <script src="../Scripts/Dialog.js" type="text/javascript"></script>
     <link href="../App_Themes/Control_Theme/Dialog.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="css/default.css" type="text/css" />
-    <link href="css/tag.css" rel="stylesheet" type="text/css" />    
+    <link href="css/tag.css" rel="stylesheet" type="text/css" />
+    <link href="css/default.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
     <title>固定资产管理系统</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
         <script type="text/javascript">
